# bumame-python-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker_start.sh  nb_batch_summaries.ipynb  print.py  pyproject.toml  report_consumer.py  report_example.css  report_example.html  run_api_server.py
agent/: report_generator_agent.py
api/: cloud_run_job_api.py  healthcheck_api.py  report_generator_api.py
config/: logging.py
helper/: cloud_run_job.py  common.py  database.py  language_mapping_medical_report.py  mics.py  rmq.py  singleton.py
model/: common.py  review_items_model.py  review_model.py  usage.py
schema/: base.py
service/: misc_service.py  patient_service.py  translate_service.py
templates/: identity-section.html  laboratory-identity-section.html  print.css  reports.html
